rosa-webapp-gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-26899
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-26899
  template:
    metadata:
      labels:
        app: webapp-26899
    spec:
      serviceAccountName: webapp-sa-26899
      containers:
        - name: webapp-container-26899
          image: akashpandiyan/mypyapp:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webapp-storage-26899
              mountPath: /usr/share/webapp-26899
      volumes:
        - name: webapp-storage-26899
          persistentVolumeClaim:
            claimName: webapp-pvc-26899
