rosa-webapp-gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-26899
spec:
  selector:
    app: webapp-26899
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
