rosa-webapp-gitops/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-route-26899
spec:
  to:
    kind: Service
    name: webapp-service-26899
  port:
    targetPort: 80
  wildcardPolicy: None
